# blackboard

./: README.md
sim/: CMakeLists.txt
sim/inc/: blackboard_42_data_provider.hpp  blackboard_data_point.hpp  blackboard_hardware_model.hpp
sim/src/: blackboard_42_data_provider.cpp  blackboard_data_point.cpp  blackboard_hardware_model.cpp
